erDiagram
    categories ||--o{ items : contains
    items ||--o{ item_locations : available_at
    users ||--o{ purchases : makes
    items ||--o{ purchases : is_purchased_in

    users {
        int id PK
        varchar name
        varchar email
        varchar password
        varchar role
        varchar reset_token
        datetime reset_expires_at
        datetime created_at
    }

    categories {
        int id PK
        varchar name
        varchar slug
    }

    items {
        int id PK
        varchar name
        varchar slug
        decimal price
        decimal rating
        int category_id FK
        text description
        text description_en
        varchar image
        datetime created_at
    }

    item_locations {
        int id PK
        int item_id FK
        varchar location_name
        varchar address
        varchar map_url
        varchar availability_note
    }

    purchases {
        int id PK
        int user_id FK
        int item_id FK
        datetime purchased_at
    }
